Closed Bug 843626 Opened 11 years ago Closed 11 years ago

GC: Rooting analysis failures in parallel array jittests

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: jonco, Assigned: jonco)

Details

Attachments

(1 file)

Attached patch Proposed fixSplinter Review
Here's a fix for the following failures:

    /home/jon/work/rooting/js/src/jit-test/tests/parallelarray/scan-3.js
    /home/jon/work/rooting/js/src/jit-test/tests/parallelarray/scatter-7.js
    /home/jon/work/rooting/js/src/jit-test/tests/parallelarray/scatter-8.js

This just changes ParallelArrayObject::dimensionsGetter() to use the version of NewDenseCopiedArray() that takes an object and element offset for the source, rather than the version that takes a raw Value pointer.
Attachment #716563 - Flags: review?(terrence)
Attachment #716563 - Flags: review?(terrence) → review+
https://hg.mozilla.org/mozilla-central/rev/b35cf8a9852f
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: