Bug 843626 GC: Rooting analysis failures in parallel array jittests r=terrence